--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
+
+spring.data.rest.default-page-size=20
+spring.data.rest.base-path=/api
